# OS_course

./: README.md
lab1/: CMakeLists.txt  README.md  build.sh
lab1/config/: config.yaml
lab1/source/lib/: CMakeLists.txt
lab1/source/lib/Config/: Config.h  ConfigLoader.h  YamlConfigLoader.cpp  YamlConfigLoader.h
lab1/source/lib/Daemon/: Daemon.cpp  Daemon.h  DiskMonitor.cpp  DiskMonitor.h
lab1/source/lib/DirectoriesWatcher/: DirectoriesWatcher.cpp  DirectoriesWatcher.h
lab1/source/lib/Logger/: Logger.h  SystemLogger.cpp  SystemLogger.h
lab1/source/lib/Observer/: Message.h  Messages.h  Observer.h  Subject.h
lab1/source/lib/OnceInstaniated/: OnceInstantiated.h
lab1/source/lib/OnceInstantiated/: OnceInstantiated.h
lab1/source/lib/Queue/: ThreadSafeQueue.h
lab1/source/lib/SigHandler/: SigHandler.cpp  SigHandler.h  SignalHandler.cpp  SignalHandler.h
lab1/source/lib/SignalHandler/: SignalHandler.cpp  SignalHandler.h
lab1/source/main/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  README.md  build.sh  lab2.md
lab2/proto/: messages.proto
lab2/source/client/: CMakeLists.txt  client.cpp
lab2/source/client/CharClientServer/: ChatClientServer.cpp  ChatClientServer.h
lab2/source/conns/: CMakeLists.txt
lab2/source/conns/Fifo/: Conn_Fifo.cpp  Conn_Fifo.h
lab2/source/conns/Mq/: Conn_Mq.cpp  Conn_Mq.h
lab2/source/conns/Sock/: Conn_Sock.cpp  Conn_Sock.h
lab2/source/host/: CMakeLists.txt  host.cpp
lab2/source/host/ChatHostServer/: ChatHostServer.cpp  ChatHostServer.h  ClientConn.h
lab2/source/host/ChatServer/: ChatServer.cpp  ChatServer.h
lab2/source/lib/: CMakeLists.txt  Types.h
lab2/source/lib/ChatClient/: ChatClient.cpp  ChatClient.h
lab2/source/lib/Conns/: Conn.h  Conn_Fifo.cpp  Conn_Fifo.h  Conn_Mq.cpp  Conn_Mq.h  Conn_Sock.cpp  Conn_Sock.h
lab2/source/lib/MessageMaker/: MessageMaker.cpp  MessageMaker.h
lab2/source/lib/NcursesConsole/: NcursesConsole.cpp  NcursesConsole.h
lab2/source/lib/SignalHandler/: ISignalHandler.h  MultiSignalHandler.cpp  MultiSignalHandler.h  SignalUtils.cpp  SignalUtils.h  SingleSignalHandler.cpp  SingleSignalHandler.h
lab2/source/lib/TaskScheduler/: SimpleTaskScheduler.cpp  SimpleTaskScheduler.h
lab2/source/lib/Timer/: Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
lab2/source/lib/Types/: Console.h  SignalHandler.h
lab2/source/types/: CMakeLists.txt  Common.h  Conn.h  Console.h  Server.h  SignalHandler.h  TaskScheduler.h
